# ProxyEx

./: README.md
logic-contract-prep/data/: sample.json
logic-contract-prep/scripts-analyze/: analyze.py
proxy-contract-prep/: 1k.csv
proxy-contract-prep/proxyex/: generatefacts  proxyex.py
proxy-contract-prep/proxyex/clientlib/: function_inliner.dl  tac_instructions.dl
proxy-contract-prep/proxyex/logic/: functions.dl  global.dl  local.dl
proxy-contract-prep/proxyex/logic/context-sensitivity/: abstract_context.dl
proxy-contract-prep/proxyex/src/: exporter.py
proxy-contract-prep/scripts-analyze/: analyze_proxy.py
proxy-contract-prep/scripts-run/: kill-proxy.sh  proxy.sh  run.py
three-research-questions/rq1/data/: iv_rq1_figure3.csv
three-research-questions/rq1/script/: iv_rq1_figure3.py  iv_rq1_figure4.py  iv_rq1_figure5.py
three-research-questions/rq2/data/: code_hiding.csv  code_sharing.txt  extensibility_proxies.txt  v_rq2_figure6.txt
three-research-questions/rq2/script/: v_rq2_figure6.py
three-research-questions/rq3/: identified_initialize_function_calldata.csv  logic_logic_collision.txt  logic_logic_collision_detector_evaluation_sampled_contract_pairs.csv  proxy_logic_collision.txt  proxy_logic_collision_detector_evaluation_sampled_txs.txt  uninitialized.csv  uninitialized_proxy_detector_evaluation_sampled_logic_contracts.csv
three-research-questions/rq3/pitfall-detection-helpers/: Cargo.toml  README.md  config.toml
three-research-questions/rq3/pitfall-detection-helpers/src/: config.rs  lib.rs  original_replay.rs  pool.rs  replaced_replay.rs
three-research-questions/rq3/pitfall-detection-helpers/src/dataset/: mod.rs
three-research-questions/rq3/pitfall-detection-helpers/src/entities/: collision.rs  creation.rs  error.rs  fake.rs  fake_loose.rs  filtered_replay.rs  initialize.rs  invocation.rs  metadata.rs  mod.rs  proxy.rs  regression.rs  regression_filter.rs  replay.rs  version.rs
three-research-questions/rq3/pitfall-detection-helpers/src/inspectors/: collision.rs  ether.rs  mod.rs
