[package]
name = "proxyex-detector"
authors = ["Wuqi Zhang (William Aaron Cheung)"]
description = "Detect vulnerabilities in proxy contracts via transaction replay."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migration"
path = "bin/migration/main.rs"

[[bin]]
name = "replay"
path = "bin/replay/main.rs"

[[bin]]
name = "import"
path = "bin/import/main.rs"

[[bin]]
name = "version"
path = "bin/version/main.rs"

[[bin]]
name = "regression"
path = "bin/regression/main.rs"

[[bin]]
name = "analyze"
path = "bin/analyze/main.rs"

[[bin]]
name = "filter-replay"
path = "bin/filter-replay/main.rs"

[[bin]]
name = "fake-proxy-detector"
path = "bin/fake-proxy-detector/main.rs"

[[bin]]
name = "uninitialized"
path = "bin/uninitialized/main.rs"

[[bin]]
name = "regression-filter"
path = "bin/regression-filter/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsofl-core = { git = "https://github.com/Troublor/LibSOFL.git", rev = "5c3d330bf5a96bd28ccc4d665bf996e1aeef704e"}
libsofl-utils = { git = "https://github.com/Troublor/LibSOFL.git", rev = "5c3d330bf5a96bd28ccc4d665bf996e1aeef704e"}
libsofl-reth = { git = "https://github.com/Troublor/LibSOFL.git", rev = "5c3d330bf5a96bd28ccc4d665bf996e1aeef704e"}

clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "json",
    "env-filter",
] }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
log = "0.4"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.102"
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
sea-orm-migration = { version = "^0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
crossbeam = "0.8"
rayon = "1.8"
futures = "0.3"
